# webapp-regularizacion-v1

./: fix_juan_juan_docs.py  linkedin_data_scientist_florida_remoto_desde_espana.xls  linkedin_data_scientist_florida_remoto_desde_espana.xlsx  linkedin_data_scientist_florida_remoto_desde_espana_COMPLETO.xls  test_zip_naming.py
mvp_whatsapp_files/backend/: .env.example  ACTUALIZAR_CLIENTES.sql  Dockerfile  EJECUTAR_MIGRACIONES.sql  PRISMA_GUIDE.md  PRISMA_SETUP_COMPLETE.md  check_db_schema.py  classify_test_documents.py  confirm_user.py  execute_migrations.py  migrate_notes_field.py  migration_report_20260213_203204.json  migrations_consolidated.sql  prisma.sh  pyproject.toml  run_migrations.py  setup_supabase.sh  sync_to_supabase.sh  test_auth.py  test_prisma_connection.py  test_prisma_queries.py  test_supabase_connection.py  update_clients.py  verify_migrations.py
mvp_whatsapp_files/backend/app/: main.py
mvp_whatsapp_files/backend/app/adapters/: __init__.py  factory.py  repository_base.py  storage_base.py  whatsapp_base.py
mvp_whatsapp_files/backend/app/api/: clients.py  conversations.py  dev.py  documents.py  health.py  prisma_clients.py  whatsapp.py
mvp_whatsapp_files/backend/app/core/: config.py  logging.py
mvp_whatsapp_files/backend/app/db/: prisma_client.py  schema.sql  supabase.py
mvp_whatsapp_files/backend/app/models/: dto.py  enums.py
mvp_whatsapp_files/backend/app/whatsapp/: media.py  (+3 more)
mvp_whatsapp_files/backend/prisma/: schema.prisma
mvp_whatsapp_files/backend/reports/: .gitkeep  sync_report_20260211_221905.json  sync_report_20260211_222557.json
(+81 files in other folders)
